# grasp_teacher_pkg

./: CMakeLists.txt  package.xml
grasp_teacher/: CMakeLists.txt  package.xml  readme.md  setup.py
grasp_teacher/data/grasp_pose/: pose_.yml  pose_01.yml
grasp_teacher/data/robot_pose/: pose_funnel1_bottom.yml
grasp_teacher/launch/: grasp_teacher.launch  grasp_teacher_dummy_test.launch  grasp_teacher_test.launch  pose_recorder.launch  pose_recorder_lab.launch
grasp_teacher/rviz/: grasp_teacher_rviz.rviz
grasp_teacher/scripts/: grasp_teacher_client.py  grasp_teacher_node.py  grasp_teacher_server.py  pose_recorder_client.py  pose_recorder_client_new.py  pose_recorder_server.py  pose_recorder_server_new.py  test.py
grasp_teacher/src/grasp_teacher/: __init__.py  conversions.py
grasp_teacher_msgs/: CMakeLists.txt  package.xml
grasp_teacher_msgs/srv/: GetKrlAxis.srv  GetPoseStamped.srv  GetPoseXYZABC.srv
grasp_teacher_pkg/: CMakeLists.txt  package.xml
launch/: grasp_teacher_test.launch
scripts/: grasp_teacher_node.py  test.py
