<?xml version="1.0"?>
<package format="2">
  <name>grasp_teacher</name>
  <version>0.0.1</version>
  <description>Grasp Teacher</description>
  <author>Eirik Wik Haug</author>
  <maintainer email="eirikwha@stud.ntnu.no">Eirik Wik Haug</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>python</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>grasp_teacher_msgs</depend>
</package>