<?xml version="1.0"?>
<package format="2">
  <name>grasp_teacher_msgs</name>
  <version>0.0.1</version>
  <description>Messages and services for the grasp teacher package</description>
  <author>Eirik Wik Haug</author>
  <maintainer email="eirikwha@stud.ntnu.no">Eirik Wik Haug</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
